test: finish authors use cases tests